// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contactForms reducer contactFormDeleted action should delete a contact form from the state 1`] = `
{
  "contactFormById": {
    "666": {
      "account_id": 1,
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2023-02-21T19:21:06.804Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "email_integration": {
        "email": "princesspolly@gorgias.com",
        "id": 1,
      },
      "help_center_id": null,
      "id": 1,
      "name": "SF Bicycles Contact Form",
      "shop_name": null,
      "source": "manual",
      "subject_lines": {
        "allow_other": true,
        "options": [
          "Track order",
          "Report issue",
          "Return order",
          "Cancel order",
          "Give feedback",
        ],
      },
      "uid": "1ABCDE12345",
      "updated_datetime": "2023-02-21T19:21:06.804Z",
      "url_template": "http://contact.gorgias.docker/forms/1ABCDE12345",
    },
  },
}
`;

exports[`contactForms reducer contactFormUpdated action should replace an existing contact form in the state 1`] = `
{
  "contactFormById": {
    "1": {
      "account_id": 1,
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2023-02-21T19:21:06.804Z",
      "deactivated_datetime": null,
      "default_locale": "da-DK",
      "email_integration": {
        "email": "princesspolly@gorgias.com",
        "id": 1,
      },
      "help_center_id": null,
      "id": 1,
      "name": "test",
      "shop_name": null,
      "source": "manual",
      "subject_lines": {
        "allow_other": true,
        "options": [
          "TEST",
        ],
      },
      "uid": "1ABCDE12345",
      "updated_datetime": "2023-02-21T19:21:06.804Z",
      "url_template": "http://contact.gorgias.docker/forms/1ABCDE12345",
    },
  },
}
`;

exports[`contactForms reducer contactFormsFetched action should add the contact forms to the state 1`] = `
{
  "contactFormById": {
    "1": {
      "account_id": 1,
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2023-02-21T19:21:06.804Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "email_integration": {
        "email": "princesspolly@gorgias.com",
        "id": 1,
      },
      "help_center_id": null,
      "id": 1,
      "name": "SF Bicycles Contact Form",
      "shop_name": null,
      "source": "manual",
      "subject_lines": {
        "allow_other": true,
        "options": [
          "Track order",
          "Report issue",
          "Return order",
          "Cancel order",
          "Give feedback",
        ],
      },
      "uid": "1ABCDE12345",
      "updated_datetime": "2023-02-21T19:21:06.804Z",
      "url_template": "http://contact.gorgias.docker/forms/1ABCDE12345",
    },
  },
}
`;
